# tutorial-kopuru-streamlit

./: Aplicacion.py  README.md  app.py  img.rar  preliminar.md  pyproject.toml  requirements.txt  streamlit_func.py
.streamlit/: config.toml
Pages/: Modelo.py
models/: convnet_mnist_104k.keras  convnet_mnist_104k_weights.h5  convnet_model.py
pages/: 1_Modelo.py
